# Financial-Analyst-Agent

./: .gitignore  CLAUDE.md  README.md  app.py  chainlit.md  chainlit_app.py  pyproject.toml  requirements.txt
.files/ad0aab0f-758c-4112-97de-b57673db4f25/: 20bfb860-1ad0-44dd-afa1-607b628c00b2.json
backend/: __init__.py
backend/agent/: __init__.py  financial_agent.py
backend/tools/: __init__.py  company_info.py  comparison.py  stock_data.py  visualization.py
backend/utils/: __init__.py  chainlit_helpers.py  session_state.py
tests/: __init__.py  test_chainlit_helpers.py  test_company_info.py  test_comparison.py  test_stock_data.py  test_visualization.py
