[project]
name = "financial-analyst-agent"
version = "1.0.0"
description = "AI-powered financial research assistant using LangChain and Chainlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=1.0.0",
    "langchain==0.2.16",
    "langchain-core==0.2.41",
    "langchain-openai==0.1.25",
    "openai==1.47.1",
    "yfinance==0.2.66",
    "plotly==6.5.0",
    "httpx==0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
